# ros2-space-concordia-intro

./: .gitignore  README.md
src/build_my_string/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/build_my_string/scripts/: py_subscriber.py
src/build_my_string/src/: cpp_publisher.cpp
